--- a/raspberry-backend/static/css/style_v3.css
+++ b/raspberry-backend/static/css/style_v3.css
@@ -6113,7 +6113,7 @@ border: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .card-reading {
-  background-color: rgb(211,211,211);
+  background-color: white;
 }
 .card-input-reading {
   background-color: white;
@@ -6134,6 +6134,7 @@ border: 1px solid rgba(0, 0, 0, 0.125);
 .main-gauge-container {
     display:flex;
     flex: 1 1 auto;
+    position:relative;
     width:100%;
   align-items:top;
   justify-content: center;
@@ -6160,4 +6161,46 @@ border: 1px solid rgba(0, 0, 0, 0.125);
 }
 .select-container {
     width:100%;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  position:relative;
+}
+
+.float-bottom-right {
+  position: absolute;
+  right:    0;
+  bottom:   0;
 }
