--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -46,7 +46,7 @@
 	      <!--<div class="small ml-auto mr-auto">PC-A/C</div>-->
               <div class="card-body px-1 py-1">
 		<div class = "select-container lockable" disabled>
-		  <select class = "input-reading ml-auto mr-auto input-editable pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Ventilator Mode" width="10%">
+		  <select class = "input-reading ml-auto mr-auto pickout" name="VentilatorMode" id="vent_mode" pickouttitle="Select Ventilator Mode" width="10%">
 		  <option value = ""></option>
 		  <optgroup label = "Pressure Control Modes">
 		    <option value="opt1" selected>PC-A/C</option>
@@ -66,7 +66,7 @@
 		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
               </div>
 			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
-			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fio"></canvas></div>
+			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fio" class=""></canvas></div>
 	  </div>
 
 	
@@ -99,7 +99,7 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">PEEP<small>[cmH20]</small></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable" name = "PEEP" id = "PEEP_input" value=5 readOnly disabled onclick="show_easy_numpad(this,peep_controller)"></div>
+	      <div class="card-body px-1 py-1 tiny"><input class = "input-reading lockable" name = "PEEP" id = "PEEP_input" value=5 readOnly disabled onclick="show_easy_numpad(this,peep_controller)"></div>
 	    </div>
 
 
@@ -144,7 +144,7 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">I:E</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading input-editable" id = "ie_ratio_input" value=1:1.3 readOnly disabled onclick="format_ie(this,ie_ratio_controller)"> </div> 
+              <div class="card-body px-1 py-1 tiny"><input class = "input-reading lockable" id = "ie_ratio_input" value=1:1.3 readOnly disabled onclick="format_ie(this,ie_ratio_controller)"> </div> 
 	    </div>
 	</div>
 	<!-- end row 4 -->
