fixed plots on index and prototype pages

--- a/raspberry-backend/templates/index_prototype.html
+++ b/raspberry-backend/templates/index_prototype.html
@@ -94,9 +94,9 @@
 			  	</div>
 				<div class="card-reading-proto">
     	    		<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-				    	<a class="small text-dark stretched-link col-center" href="#">Patient [cmH2O]</a>
+				    	<a class="tiny text-dark stretched-link col-center" href="#">Airway Pressure [mbar]</a>
 		            </div>
-    	 			<div class="card-body px-1 py-1"><span class = "reading-main" id = "pressure_patient">000.00</span></div>
+    	 			<div class="card-body px-1 py-1"><span class = "reading-main" id = "airway_pressure">000.00</span></div>
 			  	</div>
 			  	<div class="card-reading-proto">
 	    	       	<div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
@@ -109,7 +109,7 @@
 					<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 					  <a class="small text-dark stretched-link col-center" href="#">Pressure [mbar]</a>
 					</div>
-					<div class="card-body px-1 py-1"><span class = "reading-main" id = "airway_pressure">000.00</span></div>
+					<div class="card-body px-1 py-1"><span class = "reading-main" id = "pressure_patient">000.00</span></div>
 				</div>
 				<div class="card-reading-proto">
 					<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
@@ -138,7 +138,7 @@
 					<div class="card-body px-1 py-1"><span class = "reading-main" id = "timestamp">000.00</span></div>
 				</div>
 			
-				<div class="card-reading-proto">
+				<div class="card-reading-proto d-none">
 					<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 						<a class="small text-dark col-center" href="#">Version</a>
 					</div>
