--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -25,6 +25,13 @@
   <form class="settings-form">
     <table class = "ml-auto mr-auto">
     <tr>
+    <td></td>
+    <td></td>
+    <td>Set Value</td>
+    <td>Measured Value</td>
+    </tr>
+
+    <tr>
       <td></td><td><label class="small">Mode</label> </td>
       <td>
       <div class = "select-container lockable" disabled>
