--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -66,7 +66,7 @@
 		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
               </div>
 			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
-			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fio" class=""></canvas></div>
+			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fi02_percent" class=""></canvas></div>
 	  </div>
 
 	
@@ -75,14 +75,14 @@
 	  <a class="small text-dark col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O]</small> </a>
 		</div>
 		<!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
-		<div class = "main-gauge-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_p_plateau"></canvas></div>
+		<div class = "main-gauge-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_plateau_pressure"></canvas></div>
 	</div>
 
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
 	      </div>
-		  <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id="p_peak" readOnly disabled value=20.0></div> 
+		  <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="peak_inspiratory_pressure"></span></div> 
 	    </div>
 	
 	<!--- end row 1 -->
@@ -92,14 +92,14 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">P<sub>Mean</sub> <small>[cmH2O]</small></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><div class = "vertical-align"><input class = "input-reading" id = "p_mean" value=13.0 readOnly disabled></div></div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mean_airway_pressure"></span></div>
 	  </div>
 
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">PEEP<small>[cmH20]</small></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><input class = "input-reading lockable" name = "PEEP" id = "PEEP_input" value=5 readOnly disabled onclick="show_easy_numpad(this,peep_controller)"></div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "main-reading" name = "PEEP" id = "peep" onclick="show_easy_numpad(this,peep_controller)"></span></div>
 	    </div>
 
 
@@ -112,20 +112,20 @@
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">VTI <small>[mL]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "vti" value=285 readOnly disabled></span></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_tidal_volume"></span></div>
 	  </div>
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">VTE <small>[mL]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "vte" value=273 readOnly disabled></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_tidal_volume"></span></div>
 	    </div>
 	    
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
 		<a class="small text-dark col-center" href="#">MVI <small>[L/min]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "mvi" value=6.5 readOnly disabled></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_minute_volume"></span></div>
 	    </div>
 	    
 
@@ -137,14 +137,14 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
 		<a class="small text-dark col-center" href="#">MVE <small>[L/min]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading" id = "mve" value=6.0 readOnly disabled></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mve" value=6.0 readOnly disabled></span></div>
 	    </div>
 	    
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">I:E</a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><input class = "input-reading lockable" id = "ie_ratio_input" value=1:1.3 readOnly disabled onclick="format_ie(this,ie_ratio_controller)"> </div> 
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main lockable" id = "inhale_exhale_ratio" onclick="format_ie(this,ie_ratio_controller)"></span></div> 
 	    </div>
 	</div>
 	<!-- end row 4 -->
@@ -258,9 +258,9 @@ class input_controller{
 fio_controller       = new gauge_controller("fio_gauge");
 p_plateau_controller = new gauge_controller("p_plateau_gauge");
 
-var peep_input = document.getElementById("PEEP_input");
+var peep_input = document.getElementById("peep");
 peep_controller = new input_controller("peep", peep_input);
-var ie_ratio_input = document.getElementById("ie_ratio_input");
+var ie_ratio_input = document.getElementById("inhale_exhale_ratio");
 
 /*
 var gauge_fio_container = document.getElementById("gauge-fio-container");
