--- a/raspberry-backend/templates/chartsLoop.html
+++ b/raspberry-backend/templates/chartsLoop.html
@@ -3,26 +3,23 @@
 {% block content %}
 <main>
   <div class="container-fluid">
-    <!--<h1 class="mt-4">Info</h1> !-->
-    <div class = "row">
-      <div class = "col-md-12 py-0 px-3">
-	<div class="row">
-              <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
-              <canvas id="pressure_volume_chart" width="100%" height="15"></canvas>
-	</div>
-	<div class="row">
-              <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
-              <canvas id="flow_volume_chart" width="100%" height="15"></canvas>
-	</div>
-	<div class="row">
-              <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
-              <canvas id="pressure_flow_chart" width="100%" height="15"></canvas>
-	</div>
-
+    <div class = "row mb-6">
+      <div class = "col-md-6 py-0 px-3">
+        <canvas id="pressure_volume_chart" width="45%" height="25"></canvas>
+      </div>
+      <div class = "col-md-6 py-0 px-3">
+        <canvas id="flow_volume_chart" width="45%" height="25"></canvas>
+        <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
       </div>
     </div>
-    
-      
+    <div class = "row mb-6">
+      <div class = "col-md-6 py-0 px-3">
+	<canvas id="pressure_flow_chart" width="45%" height="25"></canvas>
+      </div>
+      <div class = "col-md-6 py-0 px-3">	
+	<button id="LoopHoldButton" type="button" onclick="HoldLoop()"> Hold after Loop </button>
+	<br>
+	<button id="LoopStartButton" type="button" onclick="RunLoop()" disabled> Restart Loop </button>
       </div>
     </div>
   </div>
