home page values should be active

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -99,15 +99,13 @@
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">PEEP<small>[cmH20]</small></a>
 	      </div>
-	      <div class="card-body px-1 py-1 tiny"><span class = "main-reading" name = "PEEP" id = "peep" onclick="show_easy_numpad(this,peep_controller)"></span></div>
+	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "peep"></span></div>
 	    </div>
 
 
 	<!-- end row 2 -->
 
 	<!-- row 3 -->
-
-
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
 		<a class="small text-dark col-center" href="#">VTI <small>[mL]</small></a>
@@ -137,7 +135,7 @@
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
 		<a class="small text-dark col-center" href="#">MVE <small>[L/min]</small></a>
               </div>
-              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mve" value=6.0 readOnly disabled></span></div>
+              <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_minute_volume"></span></div>
 	    </div>
 	    
 	    <div class="card-reading">
