--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -229,7 +229,7 @@
 	        var el2 = document.getElementById("path-alarm");
 	        el2.classList.add("path-icon-alarm");
           } else {  
-	         document.getElementById("alarms").innerHTML = ''
+	         document.getElementById("alarms").innerHTML = 'No alarms'
 	         var el = document.getElementById("alarm_ul");
 	         el.classList.remove("alarm-red");
 	         var el2 = document.getElementById("path-alarm");
