Made text on loop plots bigger and scaled to fit on more displays

--- a/raspberry-backend/templates/chartsLoop.html
+++ b/raspberry-backend/templates/chartsLoop.html
@@ -5,21 +5,21 @@
   <div class="container-fluid">
     <div class = "row mb-6">
       <div class = "col-md-6 py-0 px-3">
-        <canvas id="pressure_volume_chart" width="45%" height="25"></canvas>
+        <canvas id="pressure_volume_chart" width="45%" height="22"></canvas>
       </div>
       <div class = "col-md-6 py-0 px-3">
-        <canvas id="flow_volume_chart" width="45%" height="25"></canvas>
+        <canvas id="flow_volume_chart" width="45%" height="22"></canvas>
         <!-- <div class="card-chart-header small ">Pressure [mbar]</div> -->
       </div>
     </div>
     <div class = "row mb-6">
       <div class = "col-md-6 py-0 px-3">
-	<canvas id="pressure_flow_chart" width="45%" height="25"></canvas>
+	<canvas id="pressure_flow_chart" width="45%" height="22"></canvas>
       </div>
       <div class = "col-md-6 py-0 px-3">	
-	<button id="LoopHoldButton" type="button" onclick="HoldLoop()"> Hold after Loop </button>
+	<button id="LoopHoldButton" type="button" onclick="HoldLoop()"> <h1>Hold after Loop</h1> </button>
 	<br>
-	<button id="LoopStartButton" type="button" onclick="RunLoop()" disabled> Restart Loop </button>
+	<button id="LoopStartButton" type="button" onclick="RunLoop()" disabled> <h1>Restart Loop</h1> </button>
       </div>
     </div>
   </div>
