alarms not have their own table

--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -237,7 +237,7 @@
 	      }    
 	  });
 	}
-	//var alarmInterval = setInterval('update_alarms()', 1000);
+	var alarmInterval = setInterval('update_alarms()', 1000);
 	
 
 	function unlock(){
