changes for dark mode

--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -41,7 +41,7 @@
 	<!---- row 1 -->
 	    <div class="card-input-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		      <span class="small text-dark col-center" href="#">Mode</span>
+		      <span class="small text-white col-center" href="#">Mode</span>
               </div>
 	      <!--<div class="small ml-auto mr-auto">PC-A/C</div>-->
               <div class="card-body px-1 py-1">
@@ -63,7 +63,7 @@
 
 	    <div class="card-input-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
+		<a class="small text-white col-center" href="#">FIO<sub>2</sub> <small>[cmH2O]</small> </a>
               </div>
 			  <!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading py-0" id = "fio2" value="62" type="number" readOnly disabled>%</div> -->
 			  <div class = "main-gauge-container lockable" id = "gauge-fio-container" onclick="show_easy_numpad(this, fio_controller);lock();"><canvas id="gauge_fi02_percent" class=""></canvas></div>
@@ -72,7 +72,7 @@
 	
 	  <div class="card-input-reading">
 		<div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-	  <a class="small text-dark col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O]</small> </a>
+	  <a class="small text-white col-center" href="#">P<sub>Plateau</sub> <small>[cmH2O]</small> </a>
 		</div>
 		<!-- <div class="card-body px-1 py-1 tiny ml-auto mr-auto"><input class = "input-reading" id = "p_plateau" value=4.0 readOnly disabled>cmH2O</div> -->
 		<div class = "main-gauge-container lockable" id = "gauge-pplateau-container" onclick = "show_easy_numpad(this, p_plateau_controller);lock();"><canvas id="gauge_plateau_pressure"></canvas></div>
@@ -80,7 +80,7 @@
 
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
+		<a class="small text-white col-center" href="#">P<sub>Peak</sub> <small>[cmH20]</small></a>
 	      </div>
 		  <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id="peak_inspiratory_pressure"></span></div> 
 	    </div>
@@ -90,14 +90,14 @@
 	<!-- row 2 -->
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">P<sub>Mean</sub> <small>[cmH2O]</small></a>
+		<a class="small text-white col-center" href="#">P<sub>Mean</sub> <small>[cmH2O]</small></a>
 	      </div>
 	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "mean_airway_pressure"></span></div>
 	  </div>
 
 	    <div class="card-reading">
 	      <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">PEEP<small>[cmH20]</small></a>
+		<a class="small text-white col-center" href="#">PEEP<small>[cmH20]</small></a>
 	      </div>
 	      <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "peep"></span></div>
 	    </div>
@@ -108,20 +108,20 @@
 	<!-- row 3 -->
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">VTI <small>[mL]</small></a>
+		<a class="small text-white col-center" href="#">VTI <small>[mL]</small></a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_tidal_volume"></span></div>
 	  </div>
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between small py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">VTE <small>[mL]</small></a>
+		<a class="small text-white col-center" href="#">VTE <small>[mL]</small></a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_tidal_volume"></span></div>
 	    </div>
 	    
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark col-center" href="#">MVI <small>[L/min]</small></a>
+		<a class="small text-white col-center" href="#">MVI <small>[L/min]</small></a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhaled_minute_volume"></span></div>
 	    </div>
@@ -133,14 +133,14 @@
 
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 small min-height-1b">
-		<a class="small text-dark col-center" href="#">MVE <small>[L/min]</small></a>
+		<a class="small text-white col-center" href="#">MVE <small>[L/min]</small></a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "exhaled_minute_volume"></span></div>
 	    </div>
 	    
 	    <div class="card-reading">
               <div class="card-header d-flex align-items-center justify-content-between py-1 min-height-1b">
-		<a class="small text-dark col-center" href="#">I:E</a>
+		<a class="small text-white col-center" href="#">I:E</a>
               </div>
               <div class="card-body px-1 py-1 tiny"><span class = "reading-main" id = "inhale_exhale_ratio"></span></div> 
 	    </div>
