--- a/raspberry-backend/templates/base.html
+++ b/raspberry-backend/templates/base.html
@@ -87,15 +87,22 @@
 			  </div></a>
   
 			  
-		    </div>
+			</div>
+
             <form action="{{ url_for('send_cmd') }}" method="post">
 		    <div class = "controls py-1 ml-auto mr-auto">
 		    <input type="submit" name="start" value="START" onclick="cmdNotification(this.value)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
 			<input type="submit" name="stop" value="STOP" onclick="cmdNotification(this.value)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
-
-		    <!-- <input type="submit" name="reset" value="RESET" onclick="cmdNotification(this.value)" class="sb-nav-button py-1 mb-1"></input> -->
 			</div>
 			</form>
+
+            <form action="{{ url_for('downloadCSV') }}" method="post">
+		    <div class = "controls py-1 ml-auto mr-auto">
+		    <input type="submit" name="export" value="EXPORT" onclick="cmdNotification(this.value)" class="lockable sb-nav-button py-1 mb-1" disabled></input>
+			</div>
+			</form>
+
+
 		  </div>
                 </nav>
 	  </div>
