--- a/raspberry-backend/templates/index.html
+++ b/raspberry-backend/templates/index.html
@@ -33,6 +33,7 @@
 		    <input type="button" class="lockable sb-nav-button" name="thirtysecs" value="30s" onclick="setChartXaxisRange_wrapper(this,-30,0)" disabled>
 		    <input type="button" class="lockable sb-nav-button" name="sixtysecs" value="60s" onclick="setChartXaxisRange_wrapper(this,-60,0)" disabled>
 		    <input type="button" class="lockable sb-nav-button" name="ninetysecs" value="90s" onclick="setChartXaxisRange_wrapper(this,-90,0)" disabled>
+		    <input type="button" class="lockable sb-nav-button" name="pause" value="Pause" onclick="togglePause()" disabled>
 		  </div>
 	      </div>
       </div>
