--- a/raspberry-backend/templates/logs.html
+++ b/raspberry-backend/templates/logs.html
@@ -26,11 +26,11 @@
   <div class="container-fluid">
     <!--<h1 class="mt-4">Info</h1> !-->
 
-    <input type="button" class="form-control py-2" value="Update alarms" id="update_button" style="background-color:#1f4793; border-color:blue; color:white"></input>
-    <button type="button" class="form-control py-2" id="ack_alarms"   style="background-color:#1f4793; border-color:blue; color:white">Acknowledge all alarms</button>
+    <input type="button" class="form-control py-2" value="Update alarms" id="update_button"></input>
+    <button type="button" class="form-control py-2" id="ack_alarms">Acknowledge all alarms</button>
 
 
-      <table id="HEV_logs">
+      <table id="HEV_logs" class="text-white">
         <thead>
             <tr>
                 <th>Date and time</th>
