--- a/raspberry-backend/templates/settings.html
+++ b/raspberry-backend/templates/settings.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container text-white">
   <div class="tab">
     <button class="tablinks" onclick="openSetting(this, 'Mode')">Mode</button>
     <button class="tablinks" onclick="openSetting(this, 'Personal')">Personal</button>
